@@ -7,10 +7,10 @@
  * Web                http://sourceforge.net/projects/jena/
  * Created            10 Feb 2003
  * Filename           $RCSfile: OWLDLProfile.java,v $
- * Revision           $Revision: 1.8 $
+ * Revision           $Revision: 1.9 $
  * Release status     $State: Exp $
  *
- * Last modified on   $Date: 2004-04-22 10:14:28 $
+ * Last modified on   $Date: 2004-05-13 13:10:09 $
  *               by   $Author: ian_dickinson $
  *
  * (c) Copyright 2002, 2003, Hewlett-Packard Development Company, LP
@@ -41,7 +41,7 @@ import java.util.*;
  *
  * @author Ian Dickinson, HP Labs
  *         (<a  href="mailto:Ian.Dickinson@hp.com" >email</a>)
- * @version CVS $Id: OWLDLProfile.java,v 1.8 2004-04-22 10:14:28 ian_dickinson Exp $
+ * @version CVS $Id: OWLDLProfile.java,v 1.9 2004-05-13 13:10:09 ian_dickinson Exp $
  */
 public class OWLDLProfile
     extends OWLProfile
@@ -117,7 +117,10 @@ public class OWLDLProfile
             },
             {  ObjectProperty.class,        new SupportsCheck() {
                 public boolean doCheck( Node n, EnhGraph g ) {
-                    return g.asGraph().contains( n, RDF.type.asNode(), OWL.ObjectProperty.asNode() );
+                    return g.asGraph().contains( n, RDF.type.asNode(), OWL.ObjectProperty.asNode() ) ||
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.TransitiveProperty.asNode() ) || 
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.SymmetricProperty.asNode() ) || 
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.InverseFunctionalProperty.asNode() );
                 }
             }
             },
@@ -134,12 +137,6 @@ public class OWLDLProfile
                 }
             }
             },
-            {  ObjectProperty.class,        new SupportsCheck() {
-                public boolean doCheck( Node n, EnhGraph g ) {
-                    return g.asGraph().contains( n, RDF.type.asNode(), OWL.ObjectProperty.asNode() );
-                }
-            }
-            },
             {  RDFList.class,               new SupportsCheck() {
                 public boolean doCheck( Node n, EnhGraph g ) {
                     return n.equals( RDF.nil.asNode() )  ||
@@ -152,7 +149,11 @@ public class OWLDLProfile
                     return g.asGraph().contains( n, RDF.type.asNode(), RDF.Property.asNode() ) ||
                     g.asGraph().contains( n, RDF.type.asNode(), OWL.ObjectProperty.asNode() ) ||
                     g.asGraph().contains( n, RDF.type.asNode(), OWL.DatatypeProperty.asNode() ) ||
-                    g.asGraph().contains( n, RDF.type.asNode(), OWL.AnnotationProperty.asNode() );
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.AnnotationProperty.asNode() ) ||
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.TransitiveProperty.asNode() ) || 
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.SymmetricProperty.asNode() ) || 
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.FunctionalProperty.asNode() ) || 
+                    g.asGraph().contains( n, RDF.type.asNode(), OWL.InverseFunctionalProperty.asNode() ); 
                 }
             }
             },
